src/Styles/Components/Header/Navbar/HamMenu.scss
@use 'src/Styles/Utils/_breakPoints' as w;

.ham-menu-container {
  visibility: hidden;
  position: fixed;
  display: flex;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: hsl(0, 0%, 0%, 0);
  z-index: 100;
  transition: background-color 0.5s ease-out;

  @include w.breakpoint-up(large) {
    display: none;
  }

  &__side-box {
    display: flex;
    width: 15em;
    flex-direction: column;
    background-color: var(--hamMenu-sideBox-color);
    transition: transform 0.5s ease-out;
    // overflow-y: auto;
    
    &__menu {
      display: flex;
      align-items: center;
      justify-content: space-between;
      // font-size: var(--hamMenu-menu-font);
      background-color: var(--secondary-color);
      padding: 1rem;
      
      &__h1 {
        color: var(--font-h-color);
      }

      &__exit-icon {
        background-color: hsl(0, 0%, 50%, 0);
        border-radius: 6rem;
        width: var(--hamMenu-exitIcon-size);
        // height: var(--hamMenu-exitIcon-size);
        padding: 0.2em;
        aspect-ratio: 1 / 1;
        cursor: pointer;
        transition: background-color 0.25s ease;

        &:hover {
          background-color: hsl(0, 0%, 50%, 1);
        }
      }
    }

    &__menu-list {
      overflow-y: auto;
      
      &::-webkit-scrollbar {
        width: 0.5em;
      }
    
      &::-webkit-scrollbar-thumb {
        cursor: grab;
        background-color: var(--sideMenu-scrollBar-background-color);
        transition: background-color 0.15s;
      }
      &::-webkit-scrollbar-thumb:active {
        cursor: grabbing;
      }
    
      &::-webkit-scrollbar-thumb:hover {
        background-color: hsl(0, 0%, 50%);
      }
    
      &::-webkit-scrollbar-track {
        background-color: rgba(42, 42, 42, 0);
      }

      &__lists {
        position: relative;
        display: flex;
        flex-direction: column;

        &__title {
          position: relative;
          display: flex;
          align-items: center;
          padding: 0.7em 0.7em 0 0.7em;
          opacity: 0.8;
          // font-size: var(--hamMenu-list-font);
          // font-weight: 500;
          color: var(--font-h-color);
          cursor: pointer;

          &::before {
            content: "";
            position: absolute;
            top: 10px;
            left: 0;
            width: 0.2em;
            height: calc(80% + 0px);
            // background-color: black;
            background-color: var(--primary-color);
            transform: translateX(-0.22em);
            transition: transform 0.25s ease;
          }

          &:hover {
            opacity: 1;
          }

          &__h2 {}

          & .expand-circle {
            // display: flex;
            // width: var(--hamMenu-list-icon);
            width: var(--icon-size);
            margin-left: auto;
            transition: transform 0.5s ease-out;
          }

          &.clicked {
            opacity: 1;

            &::before {
              transform: translateX(0);
            }

            &__h2 {
              font-weight: 550;
            }

            & .expand-circle {
              transform: rotate(-180deg)
            }
          }
        }

        &__secondary-list {
          display: flex;
          flex-direction: column;
          overflow: hidden;
          height: 0;
          transition: height 0.5s ease;
          margin: 0.35em 0;
          background-color: var(--hamMenu-secondaryList-background-color);

          &__lists {
            padding: 0.5em 1.4em;
            color: var(--font-p-color);
          }
        }

        &::before {
          content: "";
          position: absolute;
          bottom: 0;
          left: 50%;
          transform: translateX(-50%);
          width: 65%;
          height: 1px;
          background-color: hsl(0, 0%, 60%);
        }
      }
    }
  } 

  body.arabic & {
    flex-direction: row-reverse;

    &__side-box {
      &__menu {
        flex-direction: row-reverse;

      }
      &__menu-list {
        overflow: auto hidden;
        &__lists {
          &__title {
            flex-direction: row-reverse;

            &::before {
              left: auto;
              right: 0;
              transform: translateX(0.22em);
            }

            & .expand-circle {
              margin-right: auto;
              margin-left: 0;
            }

            &.clicked {
              &::before {
                transform: translateX(0);
              }
            }
          }

          &__secondary-list {
          
            &__lists {
              text-align: right;
              &__h3{}
            }
          }
        }
      }

      
    }
  }
}

